semantic_analyzer/y.output
Terminals unused in grammar

   TOK_ERROR


Grammar

    0 $accept: programa $end

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones escritura_main sentencias TOK_LLAVEDERECHA

    2 escritura_TS: %empty

    3 escritura_main: %empty

    4 declaraciones: declaracion
    5              | declaracion declaraciones

    6 declaracion: clase identificadores TOK_PUNTOYCOMA

    7 clase: clase_escalar
    8      | clase_vector

    9 clase_escalar: tipo

   10 tipo: TOK_INT
   11     | TOK_BOOLEAN

   12 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

   13 identificadores: identificador
   14                | identificador TOK_COMA identificadores

   15 funciones: funcion funciones
   16          | %empty

   17 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   18 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_CORCHETEIZQUIERDO declaraciones_funcion

   19 funcion: fn_declaration sentencias TOK_CORCHETEDERECHO

   20 parametros_funcion: parametro_funcion resto_parametros_funcion
   21                   | %empty

   22 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   23                         | %empty

   24 parametro_funcion: tipo idpf

   25 declaraciones_funcion: declaraciones
   26                      | %empty

   27 sentencias: sentencia
   28           | sentencia sentencias

   29 sentencia: sentencia_simple TOK_PUNTOYCOMA
   30          | bloque

   31 sentencia_simple: asignacion
   32                 | lectura
   33                 | escritura
   34                 | retorno_funcion

   35 bloque: condicional
   36       | bucle

   37 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   38           | elemento_vector TOK_ASIGNACION exp

   39 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   40 condicional: if_exp TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   41            | if_else TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   42 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEDERECHA sentencias TOK_LLAVEIZQUIERDA

   43 if_else: if_exp TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE

   44 bucle: while_exp TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   45 while_exp: while_tok TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO

   46 while_tok: TOK_WHILE

   47 lectura: TOK_SCANF TOK_IDENTIFICADOR

   48 escritura: TOK_PRINTF exp

   49 retorno_funcion: TOK_RETURN exp

   50 exp: exp TOK_MAS exp
   51    | exp TOK_MENOS exp
   52    | exp TOK_DIVISION exp
   53    | exp TOK_ASTERISCO exp
   54    | TOK_MENOS exp
   55    | exp TOK_AND exp
   56    | exp TOK_OR exp
   57    | TOK_NOT exp
   58    | TOK_IDENTIFICADOR
   59    | constante
   60    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   61    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   62    | elemento_vector
   63    | idf_llamada_funcion TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   64 idf_llamada_funcion: TOK_IDENTIFICADOR

   65 lista_expresiones: exp resto_lista_expresiones
   66                  | %empty

   67 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   68                        | %empty

   69 comparacion: exp TOK_IGUAL exp
   70            | exp TOK_DISTINTO exp
   71            | exp TOK_MENORIGUAL exp
   72            | exp TOK_MAYORIGUAL exp
   73            | exp TOK_MENOR exp
   74            | exp TOK_MAYOR exp

   75 constante: constante_logica
   76          | constante_entera

   77 constante_logica: TOK_TRUE
   78                 | TOK_FALSE

   79 constante_entera: TOK_CONSTANTE_ENTERA

   80 identificador: TOK_IDENTIFICADOR

   81 idpf: TOK_IDENTIFICADOR


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 10
TOK_BOOLEAN (260) 11
TOK_ARRAY (261) 12
TOK_FUNCTION (262) 17
TOK_IF (263) 42
TOK_ELSE (264) 43
TOK_WHILE (265) 46
TOK_SCANF (266) 47
TOK_PRINTF (267) 48
TOK_RETURN (268) 49
TOK_PUNTOYCOMA (269) 6 22 29
TOK_COMA (270) 14 67
TOK_PARENTESISIZQUIERDO (271) 18 42 45 60 61 63
TOK_PARENTESISDERECHO (272) 18 42 45 60 61 63
TOK_CORCHETEIZQUIERDO (273) 12 18 39
TOK_CORCHETEDERECHO (274) 12 19 39
TOK_LLAVEIZQUIERDA (275) 1 40 41 42 43 44
TOK_LLAVEDERECHA (276) 1 40 41 42 43 44
TOK_ASIGNACION (277) 37 38
TOK_MAS (278) 50
TOK_MENOS (279) 51 54
TOK_DIVISION (280) 52
TOK_ASTERISCO (281) 53
TOK_AND (282) 55
TOK_OR (283) 56
TOK_NOT (284) 57
TOK_IGUAL (285) 69
TOK_DISTINTO (286) 70
TOK_MENORIGUAL (287) 71
TOK_MAYORIGUAL (288) 72
TOK_MENOR (289) 73
TOK_MAYOR (290) 74
TOK_IDENTIFICADOR (291) 17 37 39 47 58 64 80 81
TOK_CONSTANTE_ENTERA (292) 12 79
TOK_TRUE (293) 77
TOK_FALSE (294) 78
TOK_ERROR (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
programa (42)
    on left: 1, on right: 0
escritura_TS (43)
    on left: 2, on right: 1
escritura_main (44)
    on left: 3, on right: 1
declaraciones (45)
    on left: 4 5, on right: 1 5 25
declaracion (46)
    on left: 6, on right: 4 5
clase (47)
    on left: 7 8, on right: 6
clase_escalar (48)
    on left: 9, on right: 7
tipo (49)
    on left: 10 11, on right: 9 12 17 24
clase_vector (50)
    on left: 12, on right: 8
identificadores (51)
    on left: 13 14, on right: 6 14
funciones (52)
    on left: 15 16, on right: 1 15
fn_name (53)
    on left: 17, on right: 18
fn_declaration (54)
    on left: 18, on right: 19
funcion (55)
    on left: 19, on right: 15
parametros_funcion (56)
    on left: 20 21, on right: 18
resto_parametros_funcion (57)
    on left: 22 23, on right: 20 22
parametro_funcion (58)
    on left: 24, on right: 20 22
declaraciones_funcion (59)
    on left: 25 26, on right: 18
sentencias (60)
    on left: 27 28, on right: 1 19 28 40 41 42 43 44
sentencia (61)
    on left: 29 30, on right: 27 28
sentencia_simple (62)
    on left: 31 32 33 34, on right: 29
bloque (63)
    on left: 35 36, on right: 30
asignacion (64)
    on left: 37 38, on right: 31
elemento_vector (65)
    on left: 39, on right: 38 62
condicional (66)
    on left: 40 41, on right: 35
if_exp (67)
    on left: 42, on right: 40 43
if_else (68)
    on left: 43, on right: 41
bucle (69)
    on left: 44, on right: 36
while_exp (70)
    on left: 45, on right: 44
while_tok (71)
    on left: 46, on right: 45
lectura (72)
    on left: 47, on right: 32
escritura (73)
    on left: 48, on right: 33
retorno_funcion (74)
    on left: 49, on right: 34
exp (75)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63, on right: 37
    38 39 42 45 48 49 50 51 52 53 54 55 56 57 60 65 67 69 70 71 72
    73 74
idf_llamada_funcion (76)
    on left: 64, on right: 63
lista_expresiones (77)
    on left: 65 66, on right: 63
resto_lista_expresiones (78)
    on left: 67 68, on right: 65 67
comparacion (79)
    on left: 69 70 71 72 73 74, on right: 61
constante (80)
    on left: 75 76, on right: 59
constante_logica (81)
    on left: 77 78, on right: 75
constante_entera (82)
    on left: 79, on right: 76
identificador (83)
    on left: 80, on right: 13 14
idpf (84)
    on left: 81, on right: 24


State 0

    0 $accept: . programa $end

    TOK_MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones escritura_main sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones escritura_TS funciones escritura_main sentencias TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    declaraciones  go to state 8
    declaracion    go to state 9
    clase          go to state 10
    clase_escalar  go to state 11
    tipo           go to state 12
    clase_vector   go to state 13


State 4

    0 $accept: programa $end .

    $default  accept


State 5

   10 tipo: TOK_INT .

    $default  reduce using rule 10 (tipo)


State 6

   11 tipo: TOK_BOOLEAN .

    $default  reduce using rule 11 (tipo)


State 7

   12 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    tipo  go to state 14


State 8

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . escritura_TS funciones escritura_main sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 2 (escritura_TS)

    escritura_TS  go to state 15


State 9

    4 declaraciones: declaracion .
    5              | declaracion . declaraciones

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    $default  reduce using rule 4 (declaraciones)

    declaraciones  go to state 16
    declaracion    go to state 9
    clase          go to state 10
    clase_escalar  go to state 11
    tipo           go to state 12
    clase_vector   go to state 13


State 10

    6 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 17

    identificadores  go to state 18
    identificador    go to state 19


State 11

    7 clase: clase_escalar .

    $default  reduce using rule 7 (clase)


State 12

    9 clase_escalar: tipo .

    $default  reduce using rule 9 (clase_escalar)


State 13

    8 clase: clase_vector .

    $default  reduce using rule 8 (clase)


State 14

   12 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 20


State 15

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS . funciones escritura_main sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  shift, and go to state 21

    $default  reduce using rule 16 (funciones)

    funciones       go to state 22
    fn_name         go to state 23
    fn_declaration  go to state 24
    funcion         go to state 25


State 16

    5 declaraciones: declaracion declaraciones .

    $default  reduce using rule 5 (declaraciones)


State 17

   80 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 80 (identificador)


State 18

    6 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 26


State 19

   13 identificadores: identificador .
   14                | identificador . TOK_COMA identificadores

    TOK_COMA  shift, and go to state 27

    $default  reduce using rule 13 (identificadores)


State 20

   12 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 28


State 21

   17 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    tipo  go to state 29


State 22

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones . escritura_main sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 3 (escritura_main)

    escritura_main  go to state 30


State 23

   18 fn_declaration: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_CORCHETEIZQUIERDO declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  shift, and go to state 31


State 24

   19 funcion: fn_declaration . sentencias TOK_CORCHETEDERECHO

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    sentencias        go to state 38
    sentencia         go to state 39
    sentencia_simple  go to state 40
    bloque            go to state 41
    asignacion        go to state 42
    elemento_vector   go to state 43
    condicional       go to state 44
    if_exp            go to state 45
    if_else           go to state 46
    bucle             go to state 47
    while_exp         go to state 48
    while_tok         go to state 49
    lectura           go to state 50
    escritura         go to state 51
    retorno_funcion   go to state 52


State 25

   15 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 21

    $default  reduce using rule 16 (funciones)

    funciones       go to state 53
    fn_name         go to state 23
    fn_declaration  go to state 24
    funcion         go to state 25


State 26

    6 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce using rule 6 (declaracion)


State 27

   14 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 17

    identificadores  go to state 54
    identificador    go to state 19


State 28

   12 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 55


State 29

   17 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 56


State 30

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones escritura_main . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    sentencias        go to state 57
    sentencia         go to state 39
    sentencia_simple  go to state 40
    bloque            go to state 41
    asignacion        go to state 42
    elemento_vector   go to state 43
    condicional       go to state 44
    if_exp            go to state 45
    if_else           go to state 46
    bucle             go to state 47
    while_exp         go to state 48
    while_tok         go to state 49
    lectura           go to state 50
    escritura         go to state 51
    retorno_funcion   go to state 52


State 31

   18 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_CORCHETEIZQUIERDO declaraciones_funcion

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    $default  reduce using rule 21 (parametros_funcion)

    tipo                go to state 58
    parametros_funcion  go to state 59
    parametro_funcion   go to state 60


State 32

   42 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEDERECHA sentencias TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61


State 33

   46 while_tok: TOK_WHILE .

    $default  reduce using rule 46 (while_tok)


State 34

   47 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 62


State 35

   48 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 71
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 36

   49 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 76
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 37

   37 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   39 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 77
    TOK_ASIGNACION         shift, and go to state 78


State 38

   19 funcion: fn_declaration sentencias . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 79


State 39

   27 sentencias: sentencia .
   28           | sentencia . sentencias

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    $default  reduce using rule 27 (sentencias)

    sentencias        go to state 80
    sentencia         go to state 39
    sentencia_simple  go to state 40
    bloque            go to state 41
    asignacion        go to state 42
    elemento_vector   go to state 43
    condicional       go to state 44
    if_exp            go to state 45
    if_else           go to state 46
    bucle             go to state 47
    while_exp         go to state 48
    while_tok         go to state 49
    lectura           go to state 50
    escritura         go to state 51
    retorno_funcion   go to state 52


State 40

   29 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 81


State 41

   30 sentencia: bloque .

    $default  reduce using rule 30 (sentencia)


State 42

   31 sentencia_simple: asignacion .

    $default  reduce using rule 31 (sentencia_simple)


State 43

   38 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  shift, and go to state 82


State 44

   35 bloque: condicional .

    $default  reduce using rule 35 (bloque)


State 45

   40 condicional: if_exp . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   43 if_else: if_exp . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE

    TOK_LLAVEIZQUIERDA  shift, and go to state 83


State 46

   41 condicional: if_else . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 84


State 47

   36 bloque: bucle .

    $default  reduce using rule 36 (bloque)


State 48

   44 bucle: while_exp . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 85


State 49

   45 while_exp: while_tok . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 86


State 50

   32 sentencia_simple: lectura .

    $default  reduce using rule 32 (sentencia_simple)


State 51

   33 sentencia_simple: escritura .

    $default  reduce using rule 33 (sentencia_simple)


State 52

   34 sentencia_simple: retorno_funcion .

    $default  reduce using rule 34 (sentencia_simple)


State 53

   15 funciones: funcion funciones .

    $default  reduce using rule 15 (funciones)


State 54

   14 identificadores: identificador TOK_COMA identificadores .

    $default  reduce using rule 14 (identificadores)


State 55

   12 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO .

    $default  reduce using rule 12 (clase_vector)


State 56

   17 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce using rule 17 (fn_name)


State 57

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones escritura_main sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 87


State 58

   24 parametro_funcion: tipo . idpf

    TOK_IDENTIFICADOR  shift, and go to state 88

    idpf  go to state 89


State 59

   18 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion . TOK_PARENTESISDERECHO TOK_CORCHETEIZQUIERDO declaraciones_funcion

    TOK_PARENTESISDERECHO  shift, and go to state 90


State 60

   20 parametros_funcion: parametro_funcion . resto_parametros_funcion

    TOK_PUNTOYCOMA  shift, and go to state 91

    $default  reduce using rule 23 (resto_parametros_funcion)

    resto_parametros_funcion  go to state 92


State 61

   42 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEDERECHA sentencias TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 93
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 62

   47 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce using rule 47 (lectura)


State 63

   60 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   61    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 94
    idf_llamada_funcion  go to state 72
    comparacion          go to state 95
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 64

   54 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 96
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 65

   57 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 97
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 66

   39 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   58 exp: TOK_IDENTIFICADOR .
   64 idf_llamada_funcion: TOK_IDENTIFICADOR .

    TOK_CORCHETEIZQUIERDO  shift, and go to state 77

    TOK_PARENTESISIZQUIERDO  reduce using rule 64 (idf_llamada_funcion)
    $default                 reduce using rule 58 (exp)


State 67

   79 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 79 (constante_entera)


State 68

   77 constante_logica: TOK_TRUE .

    $default  reduce using rule 77 (constante_logica)


State 69

   78 constante_logica: TOK_FALSE .

    $default  reduce using rule 78 (constante_logica)


State 70

   62 exp: elemento_vector .

    $default  reduce using rule 62 (exp)


State 71

   48 escritura: TOK_PRINTF exp .
   50 exp: exp . TOK_MAS exp
   51    | exp . TOK_MENOS exp
   52    | exp . TOK_DIVISION exp
   53    | exp . TOK_ASTERISCO exp
   55    | exp . TOK_AND exp
   56    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 98
    TOK_MENOS      shift, and go to state 99
    TOK_DIVISION   shift, and go to state 100
    TOK_ASTERISCO  shift, and go to state 101
    TOK_AND        shift, and go to state 102
    TOK_OR         shift, and go to state 103

    $default  reduce using rule 48 (escritura)


State 72

   63 exp: idf_llamada_funcion . TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 104


State 73

   59 exp: constante .

    $default  reduce using rule 59 (exp)


State 74

   75 constante: constante_logica .

    $default  reduce using rule 75 (constante)


State 75

   76 constante: constante_entera .

    $default  reduce using rule 76 (constante)


State 76

   49 retorno_funcion: TOK_RETURN exp .
   50 exp: exp . TOK_MAS exp
   51    | exp . TOK_MENOS exp
   52    | exp . TOK_DIVISION exp
   53    | exp . TOK_ASTERISCO exp
   55    | exp . TOK_AND exp
   56    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 98
    TOK_MENOS      shift, and go to state 99
    TOK_DIVISION   shift, and go to state 100
    TOK_ASTERISCO  shift, and go to state 101
    TOK_AND        shift, and go to state 102
    TOK_OR         shift, and go to state 103

    $default  reduce using rule 49 (retorno_funcion)


State 77

   39 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 105
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 78

   37 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 106
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 79

   19 funcion: fn_declaration sentencias TOK_CORCHETEDERECHO .

    $default  reduce using rule 19 (funcion)


State 80

   28 sentencias: sentencia sentencias .

    $default  reduce using rule 28 (sentencias)


State 81

   29 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce using rule 29 (sentencia)


State 82

   38 asignacion: elemento_vector TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 107
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 83

   40 condicional: if_exp TOK_LLAVEIZQUIERDA . sentencias TOK_LLAVEDERECHA
   43 if_else: if_exp TOK_LLAVEIZQUIERDA . sentencias TOK_LLAVEDERECHA TOK_ELSE

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    sentencias        go to state 108
    sentencia         go to state 39
    sentencia_simple  go to state 40
    bloque            go to state 41
    asignacion        go to state 42
    elemento_vector   go to state 43
    condicional       go to state 44
    if_exp            go to state 45
    if_else           go to state 46
    bucle             go to state 47
    while_exp         go to state 48
    while_tok         go to state 49
    lectura           go to state 50
    escritura         go to state 51
    retorno_funcion   go to state 52


State 84

   41 condicional: if_else TOK_LLAVEIZQUIERDA . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    sentencias        go to state 109
    sentencia         go to state 39
    sentencia_simple  go to state 40
    bloque            go to state 41
    asignacion        go to state 42
    elemento_vector   go to state 43
    condicional       go to state 44
    if_exp            go to state 45
    if_else           go to state 46
    bucle             go to state 47
    while_exp         go to state 48
    while_tok         go to state 49
    lectura           go to state 50
    escritura         go to state 51
    retorno_funcion   go to state 52


State 85

   44 bucle: while_exp TOK_LLAVEIZQUIERDA . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 32
    TOK_WHILE          shift, and go to state 33
    TOK_SCANF          shift, and go to state 34
    TOK_PRINTF         shift, and go to state 35
    TOK_RETURN         shift, and go to state 36
    TOK_IDENTIFICADOR  shift, and go to state 37

    sentencias        go to state 110
    sentencia         go to state 39
    sentencia_simple  go to state 40
    bloque            go to state 41
    asignacion        go to state 42
    elemento_vector   go to state 43
    condicional       go to state 44
    if_exp            go to state 45
    if_else           go to state 46
    bucle             go to state 47
    while_exp         go to state 48
    while_tok         go to state 49
    lectura           go to state 50
    escritura         go to state 51
    retorno_funcion   go to state 52


State 86

   45 while_exp: while_tok TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 111
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 87
